Update IE4 tables and figures, add new summary outputs
Added new tables and figures for IE4, including choice by intermediary, rank distributions, mortality summaries, and survival tests. Updated several existing tables to new formats and removed IE4_intermediary_choice.tex. Added new outputs for IE5 and updated empirical and model files. These changes reflect expanded analysis and improved presentation of results.

--- a/Tables/IE4/IE4_highest_by_external.tex
+++ b/Tables/IE4/IE4_highest_by_external.tex
@@ -1,12 +1,29 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Choosing Highest Offer by External Offer Status}
-\begin{tabular}{l*{6}{ccc}}
+\begin{tabular}{l*{1}{ccc}}
 \hline\hline
-            &        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count\\
+            &        mean&          sd&       count\\
 \hline
+0           &            &            &            \\
+chose\_highest\_cert&       0.523&       0.500&        4181\\
+foregone\_pct&       0.786&       1.306&        4181\\
+foregone\_pct2&       1.646&       1.468&        1995\\
+n\_total\_offers&      10.943&       5.360&        4181\\
 \hline
-\(N\)       &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &        8342&            &            \\
+1           &            &            &            \\
+chose\_highest\_cert&       0.550&       0.497&       14111\\
+foregone\_pct&       0.726&       1.249&       14111\\
+foregone\_pct2&       1.614&       1.426&        6347\\
+n\_total\_offers&      14.720&       7.093&       14111\\
+\hline
+Total       &            &            &            \\
+chose\_highest\_cert&       0.544&       0.498&       18292\\
+foregone\_pct&       0.740&       1.262&       18292\\
+foregone\_pct2&       1.622&       1.436&        8342\\
+n\_total\_offers&      13.857&       6.920&       18292\\
+\hline
+\(N\)       &       18292&            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
