--- a/Tables/IE4/IE4_rank_comparison_external_internal.tex
+++ b/Tables/IE4/IE4_rank_comparison_external_internal.tex
@@ -1,12 +1,23 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Rank Comparison: External vs Internal Accepted Offers}
-\begin{tabular}{l*{6}{cccc}}
+\begin{tabular}{l*{1}{cccc}}
 \hline\hline
-            &        mean&         p50&          sd&       count&        mean&         p50&          sd&       count&        mean&         p50&          sd&       count&        mean&         p50&          sd&       count&        mean&         p50&          sd&       count&        mean&         p50&          sd&       count\\
+            &        mean&         p50&          sd&       count\\
 \hline
+External    &            &            &            &            \\
+offer\_rank  &        2.90&         1.0&        3.18&       13683\\
+offer\_rank\_pct&       14.74&         0.0&       21.98&       13666\\
 \hline
-\(N\)       &       18292&            &            &            &       18292&            &            &            &       18292&            &            &            &       18292&            &            &            &       18292&            &            &            &        8342&            &            &            \\
+Internal    &            &            &            &            \\
+offer\_rank  &        2.98&         2.0&        3.11&        4609\\
+offer\_rank\_pct&       19.82&         8.3&       26.81&        4438\\
+\hline
+Total       &            &            &            &            \\
+offer\_rank  &        2.92&         1.0&        3.17&       18292\\
+offer\_rank\_pct&       15.98&         0.0&       23.36&       18104\\
+\hline
+\(N\)       &       18292&            &            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
