--- a/Tables/IE4/IE4_rank_of_accepted_external.tex
+++ b/Tables/IE4/IE4_rank_of_accepted_external.tex
@@ -1,12 +1,14 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Rank of Accepted External Offers (1=Highest)}
-\begin{tabular}{l*{6}{cccccc}}
+\begin{tabular}{l*{1}{cccccc}}
 \hline\hline
-            &        mean&         p50&          sd&         min&         max&       count&        mean&         p50&          sd&         min&         max&       count&        mean&         p50&          sd&         min&         max&       count&        mean&         p50&          sd&         min&         max&       count&        mean&         p50&          sd&         min&         max&       count&        mean&         p50&          sd&         min&         max&       count\\
+            &        mean&         p50&          sd&         min&         max&       count\\
 \hline
+offer\_rank  &        2.90&            &        3.18&           1&          39&       13683\\
+offer\_rank\_pct&       14.77&            &       21.98&           0&          97&       13666\\
 \hline
-\(N\)       &       18292&            &            &            &            &            &       18292&            &            &            &            &            &       18292&            &            &            &            &            &       18292&            &            &            &            &            &       18292&            &            &            &            &            &        8342&            &            &            &            &            \\
+\(N\)       &       13683&            &            &            &            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
