--- a/Tables/IE4/IE4_share_best_offers.tex
+++ b/Tables/IE4/IE4_share_best_offers.tex
@@ -1,12 +1,26 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Share of Accepted Offers in Top Rankings}
-\begin{tabular}{l*{6}{c}}
+\begin{tabular}{l*{1}{c}}
 \hline\hline
-            &        mean&        mean&        mean&        mean&        mean&        mean\\
+            &        mean\\
 \hline
+External    &            \\
+is\_best     &       0.522\\
+is\_top3     &       0.746\\
+is\_top5     &       0.846\\
 \hline
-\(N\)       &       18292&       18292&       18292&       18292&       18292&        8342\\
+Internal    &            \\
+is\_best     &       0.475\\
+is\_top3     &       0.723\\
+is\_top5     &       0.844\\
+\hline
+Total       &            \\
+is\_best     &       0.510\\
+is\_top3     &       0.740\\
+is\_top5     &       0.845\\
+\hline
+\(N\)       &       18292\\
 \hline\hline
 \end{tabular}
 \end{table}
