--- a/Tables/IE4/IE4_highest_by_income.tex
+++ b/Tables/IE4/IE4_highest_by_income.tex
@@ -1,12 +1,47 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Choosing Highest Offer by Income Quintile}
-\begin{tabular}{l*{6}{ccc}}
+\begin{tabular}{l*{1}{ccc}}
 \hline\hline
-            &        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count\\
+            &        mean&          sd&       count\\
 \hline
+Q1(low)     &            &            &            \\
+chose\_highest\_cert&       0.516&       0.500&        3700\\
+foregone\_pct&       1.076&       1.585&        3700\\
+foregone\_pct2&       2.222&       1.626&        1791\\
+n\_total\_offers&       7.571&       4.231&        3700\\
 \hline
-\(N\)       &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &        8342&            &            \\
+Q2          &            &            &            \\
+chose\_highest\_cert&       0.550&       0.498&        3659\\
+foregone\_pct&       0.674&       1.094&        3659\\
+foregone\_pct2&       1.497&       1.195&        1648\\
+n\_total\_offers&      12.286&       4.705&        3659\\
+\hline
+Q3          &            &            &            \\
+chose\_highest\_cert&       0.574&       0.495&        3644\\
+foregone\_pct&       0.568&       0.999&        3644\\
+foregone\_pct2&       1.332&       1.151&        1554\\
+n\_total\_offers&      15.037&       5.649&        3644\\
+\hline
+Q4          &            &            &            \\
+chose\_highest\_cert&       0.576&       0.494&        3640\\
+foregone\_pct&       0.594&       1.121&        3640\\
+foregone\_pct2&       1.402&       1.355&        1542\\
+n\_total\_offers&      17.129&       6.833&        3640\\
+\hline
+Q5(high)    &            &            &            \\
+chose\_highest\_cert&       0.505&       0.500&        3649\\
+foregone\_pct&       0.782&       1.348&        3649\\
+foregone\_pct2&       1.579&       1.553&        1807\\
+n\_total\_offers&      17.362&       7.377&        3649\\
+\hline
+Total       &            &            &            \\
+chose\_highest\_cert&       0.544&       0.498&       18292\\
+foregone\_pct&       0.740&       1.262&       18292\\
+foregone\_pct2&       1.622&       1.436&        8342\\
+n\_total\_offers&      13.857&       6.920&       18292\\
+\hline
+\(N\)       &       18292&            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
