--- a/Tables/IE4/IE4_highest_by_intermediary.tex
+++ b/Tables/IE4/IE4_highest_by_intermediary.tex
@@ -1,12 +1,29 @@
 \begin{table}[htbp]\centering
 \def\sym#1{\ifmmode^{#1}\else\(^{#1}\)\fi}
 \caption{Choosing Highest Offer by Intermediary Status}
-\begin{tabular}{l*{6}{ccc}}
+\begin{tabular}{l*{1}{ccc}}
 \hline\hline
-            &        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count&        mean&          sd&       count\\
+            &        mean&          sd&       count\\
 \hline
+0           &            &            &            \\
+chose\_highest\_cert&       0.629&       0.483&        9507\\
+foregone\_pct&       0.518&       1.047&        9507\\
+foregone\_pct2&       1.398&       1.315&        3524\\
+n\_total\_offers&      13.501&       6.185&        9507\\
 \hline
-\(N\)       &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &       18292&            &            &        8342&            &            \\
+1           &            &            &            \\
+chose\_highest\_cert&       0.452&       0.498&        8785\\
+foregone\_pct&       0.979&       1.421&        8785\\
+foregone\_pct2&       1.786&       1.498&        4818\\
+n\_total\_offers&      14.242&       7.618&        8785\\
+\hline
+Total       &            &            &            \\
+chose\_highest\_cert&       0.544&       0.498&       18292\\
+foregone\_pct&       0.740&       1.262&       18292\\
+foregone\_pct2&       1.622&       1.436&        8342\\
+n\_total\_offers&      13.857&       6.920&       18292\\
+\hline
+\(N\)       &       18292&            &            \\
 \hline\hline
 \end{tabular}
 \end{table}
